--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -5,10 +5,9 @@
          kernel,
          stdlib,
          sasl,
-        mochiweb,
-        jsx,
-        ibrowse,
-        ddb,
+         lhttpc,
+	 jiffy,
+	 dinerl,
          bingo_server
         ]},
        {rel, "start_clean", "",
@@ -26,11 +25,10 @@
         {app, stdlib, [{incl_cond, include}]},
         {app, kernel, [{incl_cond, include}]},
         {app, hipe, [{incl_cond, exclude}]},
-        {app, mochiweb, [{incl_cond, include}]},
-        {app, jsx, [{incl_cond, include}]},
-        {app, ibrowse, [{incl_cond, include}]},
-        {app, ddb, [{incl_cond, include}]},
-       {app, bingo_server, [{incl_cond, include}]}
+	{app, lhttpc, [{incl_cond, include}]},
+	{app, jiffy, [{incl_cond, include}]},
+        {app, dinerl, [{incl_cond, include}]},
+        {app, bingo_server, [{incl_cond, include}]}
       ]}.
 
 {target_dir, "bingo_server"}.
@@ -42,7 +40,7 @@
            {copy, "files/bingo_server", "bin/bingo_server"},
            {copy, "files/bingo_server.cmd", "bin/bingo_server.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
-	    {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
+	   {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
            {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
            {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
           ]}.
