--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 {sub_dirs, ["rel"]}.
 
 {deps, [
-       {ddb, ".*", {git, "https://github.com/Concurix/ddb.git"}}
+       %%{ddb, ".*", {git, "https://github.com/Concurix/ddb.git"}},
+       {dinerl, ".*", {git, "https://github.com/xumingthepoet/dinerl.git"}}
    ]
 }.
