--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {sub_dirs, ["rel"]}.
 
 {deps, [
-       %%{ddb, ".*", {git, "https://github.com/Concurix/ddb.git"}},
-       {dinerl, ".*", {git, "https://github.com/xumingthepoet/dinerl.git"}}
+	{lager, ".*", {git, "https://github.com/basho/lager.git"}},
+	{dinerl, ".*", {git, "https://github.com/xumingthepoet/dinerl.git"}}
    ]
 }.
