--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,10 +1,11 @@
 {sys, [
        {lib_dirs, ["../../","../deps/"]},
-       {rel, "bingo_server", "1",
+       {rel, "bingo_server", "2",
         [
          kernel,
          stdlib,
          sasl,
+	 lager,
          lhttpc,
 	 jiffy,
 	 dinerl,
@@ -20,7 +21,7 @@
        {excl_archive_filters, [".*"]}, %% Do not archive built libs
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
-{excl_app_filters, ["\.gitignore"]},
+	{excl_app_filters, ["\.gitignore"]},
         {app, sasl,   [{incl_cond, include}]},
         {app, stdlib, [{incl_cond, include}]},
         {app, kernel, [{incl_cond, include}]},
